fixed the overflow

--- a/style.css
+++ b/style.css
@@ -133,6 +133,33 @@
     font-size: 60px;
 }
 
+.ex-11-icon:hover {
+    font-size: 60px;
+    animation: spin-back 1s ease-out;
+}
+
+@keyframes spin-back {
+    0% {
+        rotate: 0deg;
+    }
+
+    25% {
+        rotate: 90deg;
+    }
+
+    50% {
+        rotate: 180deg;
+    }
+
+    75% {
+        rotate: 270deg;
+    }
+
+    100% {
+        rotate: 0deg;
+    }
+}
+
 .ex-12-button,
 .ex-13-button {
     position: relative;
@@ -146,6 +173,63 @@
     line-height: 70px;
     text-align: center;
     text-decoration: none;
+
+}
+
+@keyframes move-top {
+    0% {
+
+        left: 10%;
+    }
+
+    25% {
+        left: 20%;
+    }
+
+    50% {
+        left: 30%;
+    }
+
+    75% {
+        left: 40%;
+    }
+
+    75% {
+        left: 50%;
+    }
+
+}
+
+@keyframes move-bottom {
+    0% {
+
+        right: 10%;
+    }
+
+    25% {
+        right: 20%;
+    }
+
+    50% {
+        right: 30%;
+    }
+
+    75% {
+        right: 40%;
+    }
+
+    75% {
+        right: 50%;
+    }
+
+}
+
+.ex-12-top-white {
+    animation: move-top 2s linear infinite;
+}
+
+.ex-12-bottom-white {
+    animation: move-bottom 2s linear infinite;
 }
 
 .ex-12-top-white,
@@ -156,6 +240,7 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+
 }
 
 .ex-12-bottom-white,
@@ -166,4 +251,83 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+
+
+@keyframes top-around {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+
+    75% {
+        left: 0;
+        top: 100%;
+    }
+
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+
+
+}
+
+@keyframes bot-around {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+
+    30% {
+        right: calc(90% - 30px);
+        bottom: -10px;
+    }
+
+    45% {
+        right: calc(90% - 30px);
+        bottom: 100%;
+    }
+
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+
+
+
+}
+
+.ex-13-top-white {
+    animation: top-around 3s linear infinite;
+}
+
+.ex-13-bottom-white {
+    animation: bot-around 3s linear infinite;
 }
